set main_module to the script

--- a/dist.ini
+++ b/dist.ini
@@ -4,6 +4,7 @@ author              = Charles McGarvey <chazmcgarvey@brokenzipper.com>
 copyright_holder    = Charles McGarvey
 copyright_year      = 2017
 license             = MIT
+main_module         = bin/groupsecret
 
 [@Author::CCM]
 
